--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <head>Idea Factory
+  <head>
     <title>Quiz2</title>
     <%= csrf_meta_tags %>
 
@@ -19,7 +19,7 @@
               <span class="icon-bar"></span>
             </button>
             <%# <div class="brand">%>
-              <a class="navbar-brand" href="#"></a>
+              <a class="navbar-brand" href="/"></a>
 
             <%# </div>%>
           </div>
@@ -28,8 +28,8 @@
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
             <ul class="nav navbar-nav navbar-left">
-              <li><a href="/">About</a></li>
-              <li><a href="/dashboard">Contact</a></li>
+              <li><a href="/ideas/new"> New Idea</a></li>
+
 
             </ul>
             <ul class="nav navbar-nav navbar-right">
