--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,6 +28,7 @@
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
             <ul class="nav navbar-nav navbar-left">
+              <li><a href="/ideas"> All Ideas </a></li>
               <li><a href="/ideas/new"> New Idea</a></li>
 
 
