Add authentication and user controller

--- a/app/views/ideas/_form.html.erb
+++ b/app/views/ideas/_form.html.erb
@@ -1,4 +1,4 @@
-<%= @product.errors.full_messages.join(',') %>
+<%= @idea.errors.full_messages.join(',') %>
 <% if user_signed_in? %>
   <%= form_for @idea do |f| %>
   <div class='form-horizontal'>
