--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,8 +34,13 @@
 
             </ul>
             <ul class="nav navbar-nav navbar-right">
-              <li><a href="/users/new">Sign Up</a></li>
-              <li><a href="/sessions/new">Login</a></li>
+              <% if !user_signed_in? %>
+                <%= link_to('Sign Up', new_user_path) %> |
+                <%= link_to('Sign In', new_session_path) %> |
+              <% else %>
+                <%= "Welcome, #{current_user.first_name}." %>
+                <%= link_to('Log Out', sessions_path, method: :delete) %>
+              <% end %>
 
             </ul>
 
