--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,2 +1,27 @@
-<h1>Users#new</h1>
-<p>Find me in app/views/users/new.html.erb</p>
+<h1>Sign Up</h1>
+
+<%= @user.errors.full_messages.join(', ') %>
+<%= form_for @user do |f| %>
+
+<div class='form-group'>
+  <%= f.label :first_name %>
+  <%= f.text_field :first_name, class:'form-control' %>
+</div>
+<div class='form-group'>
+  <%= f.label :last_name %>
+  <%= f.text_field :last_name, class:'form-control'  %>
+</div>
+<div class='form-group'>
+  <%= f.label :email %>
+  <%= f.email_field :email, class:'form-control'  %>
+</div>
+<div class='form-group'>
+  <%= f.label :password %>
+  <%= f.password_field :password, class:'form-control'  %>
+</div>
+<div class='form-group'>
+  <%= f.label :password_confirmation %>
+  <%= f.password_field :password_confirmation, class:'form-control'  %>
+</div>
+<%= f.submit class:'btn btn-primary' %>
+<% end %>
