--- a/app/views/ideas/show.html.erb
+++ b/app/views/ideas/show.html.erb
@@ -59,7 +59,11 @@
 
         <% @reviews.each do |review| %>
         <hr>
-
+        <% if review.flag %>
+          <div>
+            🚩 Flagged Review 🚩
+          </div>
+          <% end %>
         <div>
           <%= review.body %>
         </div>
@@ -79,12 +83,12 @@
         <% end %>
 
         <% if can? :edit, @idea %>
-          <%= link_to '🚩', [@idea, review],
+          <%= link_to 'Toggle Flag', [@idea, review],
                         method: :patch %>
         <% end %>
 
-        <hr>
         <% end %>
+
 
     </div>
   </div>
