--- a/app/views/ideas/index.html.erb
+++ b/app/views/ideas/index.html.erb
@@ -1,5 +1,55 @@
 
 <div class='container-fluid'>
+
+  <%= @idea.errors.full_messages.join(',') %>
+  <% if user_signed_in? %>
+  <div class='justify-content-center'>
+    <!-- Button trigger modal -->
+    <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#idea-form">
+      New idea!
+    </button>
+  </div>
+  <div>
+    <!-- Modal -->
+    <div class="modal fade" id="idea-form" tabindex="-1" role="dialog" aria-labelledby="newIdeaForm">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title" id="idea-form-label">New Idea</h4>
+          </div>
+          <div class="modal-body">
+              <%= form_for @idea do |f| %>
+              <div class='form-horizontal'>
+
+                <div class="form-group">
+                  <%= f.label :title, class:'col-sm-2' %>
+                  <div class='col-sm-10'>
+                    <%= f.text_field :title, class: 'form-control' %>
+                  </div>
+                </div>
+
+                <div class="form-group">
+                  <%= f.label :description, class:'col-sm-2' %>
+                  <div class='col-sm-10'>
+                    <%= f.text_field :description, class: 'form-control' %>
+                  </div>
+                </div>
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <%= f.submit class: 'col-sm-offset-2 col-sm-8 btn btn-primary' %>
+              </div>
+              <% end %>
+
+          </div>
+
+        </div>
+      </div>
+    </div>
+
+</div> <!-- close modal row-->
+<% end %>
+
+
   <div class='row'>
     <div class='col-xs-12'>
       <% @ideas.each do |idea| %>
@@ -8,11 +58,12 @@
           <div class="idea-title">
             <%= link_to idea.title, idea_path(idea) %>
           </div>
-          <div class="">
+          <div class="idea-body">
             <%= idea.description %>
-          </div>
+
           <br>
-          <div>
+          <div class='post-info'>
+            <br>
             <div class="pull-left">
               By <%= idea.user&.first_name %>
 
@@ -30,6 +81,7 @@
               Members: <%= idea.member_count %> |
               Likes: <%= idea.like_count %>
             </div>
+          </div>
           </div>
           <hr>
         </div>
