--- a/app/views/ideas/index.html.erb
+++ b/app/views/ideas/index.html.erb
@@ -1,98 +1,84 @@
-
 <div class='container-fluid'>
-
+  <%# Consider moving the errors to the layout instead %>
   <%= @idea.errors.full_messages.join(',') %>
   <% if user_signed_in? %>
-  <div class='justify-content-center'>
-    <!-- Button trigger modal -->
-    <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#idea-form">
-      New idea!
-    </button>
-  </div>
-  <div>
-    <!-- Modal -->
-    <div class="modal fade" id="idea-form" tabindex="-1" role="dialog" aria-labelledby="newIdeaForm">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <h4 class="modal-title" id="idea-form-label">New Idea</h4>
-          </div>
-          <div class="modal-body">
+    <div class='justify-content-center'>
+      <!-- Button trigger modal -->
+      <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#idea-form">
+        New idea!
+      </button>
+    </div>
+    <div>
+      <!-- Modal -->
+      <div class="modal fade" id="idea-form" tabindex="-1" role="dialog" aria-labelledby="newIdeaForm">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+              <h4 class="modal-title" id="idea-form-label">New Idea</h4>
+            </div>
+            <div class="modal-body">
               <%= form_for @idea do |f| %>
-              <div class='form-horizontal'>
-
-                <div class="form-group">
-                  <%= f.label :title, class:'col-sm-2' %>
-                  <div class='col-sm-10'>
-                    <%= f.text_field :title, class: 'form-control' %>
+                <div class='form-horizontal'>
+                  <div class="form-group">
+                    <%= f.label :title, class: 'col-sm-2' %>
+                    <div class='col-sm-10'>
+                      <%= f.text_field :title, class: 'form-control' %>
+                    </div>
                   </div>
-                </div>
-
-                <div class="form-group">
-                  <%= f.label :description, class:'col-sm-2' %>
-                  <div class='col-sm-10'>
-                    <%= f.text_field :description, class: 'form-control' %>
+                  <div class="form-group">
+                    <%= f.label :description, class: 'col-sm-2' %>
+                    <div class='col-sm-10'>
+                      <%= f.text_field :description, class: 'form-control' %>
+                    </div>
                   </div>
+                  <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                  <%= f.submit class: 'col-sm-offset-2 col-sm-8 btn btn-primary' %>
                 </div>
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                <%= f.submit class: 'col-sm-offset-2 col-sm-8 btn btn-primary' %>
-              </div>
               <% end %>
-
+            </div>
           </div>
-
+        </div>
+      </div>
+    </div> <!-- close modal row-->
+  <% end %>
+  <% @ideas.each_with_index do |idea, i| %>
+    <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+      <div class="panel panel-default">
+        <%# Consider https://apidock.com/rails/ActionView/RecordIdentifier/dom_id %>
+        <div class="panel-heading" role="tab" id="heading<%= i %>">
+          <h4 class="panel-title">
+            <a role="button" data-toggle="collapse" data-target="#post<%= i %>" data-parent="#accordion" aria-expanded="true" aria-controls="post<%= i %>">
+              <%= idea.title %>
+            </a>
+          </h4>
+        </div>
+        <div id="post<%= i %>" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="heading<%= i %>" >
+          <div class="panel-body">
+            <div>
+              <%= link_to idea.description, idea %>
+            </div>
+            <div>
+              <div class='pull-left'>
+                By <%= idea.user&.first_name %>
+              </div>
+              <% if user_signed_in? %>
+                <div>
+                  <%= form_tag ideas_like_path(idea), method: :patch do %>
+                    &nbsp; <%= submit_tag '❤️' %>
+                  <% end %>
+                </div>
+              <% end %>
+              <div class ="pull-right">
+                Members: <%= idea.member_count %> |
+                Likes: <%= idea.like_count %>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
-
-</div> <!-- close modal row-->
-<% end %>
-
-      <% @ideas.each_with_index do |idea, i| %>
-        <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
-          <div class="panel panel-default">
-            <div class="panel-heading" role="tab" id="heading<%= i %>">
-              <h4 class="panel-title">
-                <a role="button" data-toggle="collapse" data-target="#post<%= i %>" data-parent="#accordion" aria-expanded="true" aria-controls="post<%= i %>">
-                  <%= idea.title %>
-                </a>
-              </h4>
-            </div>
-            <div id="post<%= i %>" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="heading<%= i %>" >
-              <div class="panel-body">
-                <div>
-                  <%= link_to idea_path(idea) do %>
-                    <%= idea.description %>
-                  <% end %>
-                </div>
-
-                <div>
-                  <div class='pull-left'>
-                    By <%= idea.user&.first_name %>
-                  </div>
-
-                  <% if user_signed_in? %>
-                    <div>
-                      <%= form_tag ideas_like_path(idea), method: :patch do %>
-                      &nbsp <%= submit_tag '❤️' %>
-                      <% end %>
-                    </div>
-                  <% end %>
-
-                  <div class ="pull-right">
-                    Members: <%= idea.member_count %> |
-                    Likes: <%= idea.like_count %>
-                  </div>
-                </div>
-
-              </div>
-            </div>
-          </div>
-        </div>
-      <% end %>
-
-
-
-
+  <% end %>
 </div>
